--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   font-weight: 400;
   padding: 0;
   color-scheme: light dark;
+
   color: rgba(255, 255, 255, 0.87);
   background-color: #333;
 
@@ -17,6 +18,17 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+.dark {
+  color: #eee;
+  background-color: #333;
+}
+
+.light {
+  color: #333;
+  background-color: #eee;
+}
+
 div {
   padding: 0;
 }
@@ -24,6 +36,7 @@ body {
   padding: 0;
   min-width: 320px;
   min-height: 100vh;
+  scroll-behavior: smooth;
 }
 
 h1 {
