--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  min-width: 0;
 }
 
 .dark {
@@ -32,6 +34,7 @@
 div {
   padding: 0;
 }
+
 body {
   padding: 0;
   min-width: 320px;
